# synapse-mcp

./: CLAUDE.md  README.md  export_info.json  mcp.json  pyproject.toml  test_extract_solutions.py  validation_report.json
.claude/agents/: python-mcp-developer.md
.qoder/rules/: python-sdk.md
.roo/: mcp.json
conversations/2025/08/: conv_20250813_002.json  conv_20250813_051.json  conv_20250813_1a8.json  conv_20250813_1c1.json  conv_20250813_33c.json  conv_20250813_44d.json  conv_20250813_5fd.json  conv_20250813_618.json  conv_20250813_637.json  conv_20250813_84f.json  conv_20250813_9c7.json  conv_20250813_9e0.json  conv_20250813_a48.json  conv_20250813_be1.json  conv_20250813_f6d.json
docs/: ai-enhancement-plan.md  ai-semantic-search-plan.md  development-tasks.md  index.html  prd.md  script.js
indexes/: keyword_index.json  metadata.json  search_index.json  tag_index.json
plan/: inject_context_improvement_plan.md
src/synapse/: __init__.py  server.py
src/synapse/models/: __init__.py  conversation.py
src/synapse/storage/: __init__.py  file_manager.py  initializer.py  paths.py
src/synapse/tools/: __init__.py  extract_solutions.py  inject_context.py  save_conversation.py  search_indexer.py  search_knowledge.py
src/synapse/utils/: __init__.py  logging_config.py
tests/: __init__.py
website/: button-test.html  index.html  script.js  standalone.html  style.css
website/4bvJf5Y/: index.html  script.js  style.css
