[project]
name = "synapse-mcp"
version = "0.1.0"
description = "智能记忆和知识检索MCP工具 - 增强AI编程助手的上下文理解能力"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.4", # MCP Python SDK (最新稳定版本)
    "platformdirs>=4.3.0", # 跨平台目录规范
    "pydantic>=2.11.0", # 数据验证和序列化 (性能优化版本)
    "python-dateutil>=2.9.0", # 日期时间处理
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",            # 测试框架
    "pytest-asyncio>=0.21.0",   # 异步测试支持
    "black>=23.0.0",            # 代码格式化
    "mypy>=1.0.0",              # 类型检查
    "ruff>=0.1.0",              # 快速代码检查和格式化
]

[project.urls]
Homepage = "https://github.com/your-username/synapse-mcp"
Repository = "https://github.com/your-username/synapse-mcp.git"
Issues = "https://github.com/your-username/synapse-mcp/issues"

[project.scripts]
synapse-mcp = "synapse.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"
extend-exclude = """
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
"""

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
